fixes serialization error after duplicate dashboard column
https://forum.portfolio-performance.info/t/nach-duplizieren-einer-spalte-im-dashboard-kann-xml-nicht-mehr-geparst-werden/23294